--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 name: Elijah Caine 
 markdown: redcarpet
-pygments: true
+# pygments: true
+highlighter: pygments
 
 excerpt_separator: <!--more-->
 permalink: :categories/:title
