I AM PEDANT HEAR ME RAWR

--- a/metadata.yml
+++ b/metadata.yml
@@ -10,6 +10,6 @@ sourcedir: 'content/posts/'
 
 listing:
     - An Update on the Update: rebuild_update.rst
-    - A New Coat of Pain: new_paint.rst
+    - A New Coat of Paint: new_paint.rst
 
 archive_cutoff: 7
